k3s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: tebakwarna-service

spec:
  selector:
    app: tebakwarna

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
