k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: tebakwarna-ingress

spec:
  ingressClassName: traefik

  rules:
  - host: tebakwarna.lab.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: tebakwarna-service
            port:
              number: 80
